--- a/pom.xml
+++ b/pom.xml
@@ -40,20 +40,7 @@
                 <version>0.7.8</version>
                 <executions>
                     <execution>
-                        <id>default-prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>default-report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>default-check</id>
+                        <id>default-jacoco-check</id>
                         <goals>
                             <goal>check</goal>
                         </goals>
