--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <!-- Sonar -->
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
+        <sonar.language>java</sonar.language>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -38,6 +46,11 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.8</version>
 
+                <configuration>
+                    <destFile>${sonar.jacoco.reportPaths}</destFile>
+                    <append>true</append>
+                </configuration>
+
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -53,6 +66,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+
+                <configuration>
+                    <reportsDirectory>${project.basedir}/../target/surefire-reports</reportsDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
