--- a/database/pom.xml
+++ b/database/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>cassandra-driver-core</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>nl.jft</groupId>
+            <artifactId>logic</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-cassandra</artifactId>
+            <version>1.5.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
