Added network module to the pom.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>logic</module>
         <module>common</module>
+        <module>network</module>
     </modules>
 
     <dependencies>
