--- a/database/pom.xml
+++ b/database/pom.xml
@@ -42,6 +42,11 @@
             <version>4.3.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
